edycja wczytywania pliku

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,8 @@ project(Projekt_4)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(Projekt_4 main.cpp
-        Matrix.h
         GeneticAlgorithm.cpp
-        LoadFromFile.cpp
-        Matrix.cpp
         ConfigFile.h
-        ConfigFile.cpp)
+        ConfigFile.cpp
+        FileReader.h
+        FileReader.cpp)
